--- a/installations/templates/installations/installation_detail.html
+++ b/installations/templates/installations/installation_detail.html
@@ -252,10 +252,14 @@
                             {% endif %}
                             
                             {% if installation.status == 'modification_required' or installation.status == 'modification_in_progress' %}
-                                <a href="{% url 'installations:modification_detail' installation.modificationrequest_set.first.id %}" 
-                                   class="btn btn-outline-info">
-                                    <i class="fas fa-eye"></i> عرض طلب التعديل
-                                </a>
+                                {% with first_modification=installation.modificationrequest_set.first %}
+                                    {% if first_modification %}
+                                        <a href="{% url 'installations:modification_detail' first_modification.id %}" 
+                                           class="btn btn-outline-info">
+                                            <i class="fas fa-eye"></i> عرض طلب التعديل
+                                        </a>
+                                    {% endif %}
+                                {% endwith %}
                             {% endif %}
                             
                             <a href="{% url 'installations:add_payment' installation.id %}" 
